--- a/Game/src/resources/application-custom.properties
+++ b/Game/src/resources/application-custom.properties
@@ -4,7 +4,7 @@ wall.char = #
 goal.char = $
 empty.char = .
 enemy.color = RED
-player.color = GREEN
-wall.color = MAGENTA
-goal.color = YELLOW
-empty.color = BLUE
+player.color = BLUE
+wall.color = BLACK
+goal.color = MAGENTA
+empty.color = WHITE
